<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent" android:orientation="vertical">
    <TextView android:layout_height="wrap_content" android:id="@+id/textView2" android:layout_width="wrap_content" android:text="@string/noSSLDialDiscl"></TextView>
    <CheckBox android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/noSSLWindChckBoxt" android:id="@+id/noSSLDialogCheck"></CheckBox>
    <TextView android:layout_height="wrap_content" android:id="@+id/textView1" android:layout_width="wrap_content" android:text="@string/noSSLWindToProc"></TextView>
    <Button android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="@string/Confirm" android:id="@+id/noSSLDialogBTN"></Button>
</LinearLayout>
