<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/layout_root" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:padding="10dp"
	android:orientation="vertical">
	<ImageView android:src="@drawable/lock" android:id="@+id/imageView1"
		android:layout_height="wrap_content" android:layout_width="wrap_content"></ImageView>
	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="@string/enterOldPass" android:id="@+id/oldPassLabel"></TextView>
	<EditText android:text="EditText" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:id="@+id/oldPass"></EditText>
	<TextView android:id="@+id/textView2" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="@string/enterNewPass"></TextView>
	<EditText android:text="EditText" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:id="@+id/newPass1"></EditText>
	<TextView android:id="@+id/textView3" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="@string/enterNewPass2"></TextView>
	<EditText android:text="EditText" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:id="@+id/newPass2"></EditText>
	<LinearLayout android:id="@+id/linearLayout1"
		android:layout_width="fill_parent" android:layout_height="fill_parent">
		<Button android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/Confirm" android:id="@+id/passwordDialogOK"></Button>
		<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cancel" android:id="@+id/passwordDialogCancel"></Button>
	</LinearLayout>


</LinearLayout>
